// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dex reducer default 1`] = `
Object {
  "orderBookSnapshot": Object {
    "asks": Array [],
    "bids": Array [],
    "pair": "pair",
    "version": 0,
  },
  "orderBookSubscription": "",
  "updateOrders": Object {
    "account": "",
    "amount": 0,
    "balance": 0,
    "currentSequence": 0,
    "fill": 0,
    "initialSequence": 0,
    "orderHash": "",
    "pair": "",
    "price": 0,
    "side": "",
    "status": "",
    "type": "",
    "updatedBy": "",
  },
  "userOrderSubscription": 0,
  "userOrders": Array [],
}
`;

exports[`dex reducer orderBookSnapshot 1`] = `
Object {
  "orderBookSnapshot": Object {
    "asks": Array [
      2,
    ],
    "bids": Array [
      1,
    ],
    "pair": "pair",
    "version": 123,
  },
  "orderBookSubscription": "pair",
  "updateOrders": Object {
    "userOrder": "test",
  },
  "userOrderSubscription": 0,
  "userOrders": Array [
    Object {
      "userOrders": "test",
    },
  ],
}
`;

exports[`dex reducer orderBookSnapshot wrong pair 1`] = `
Object {
  "orderBookSnapshot": Object {
    "asks": Array [
      2,
    ],
    "bids": Array [
      1,
    ],
    "pair": "pair",
    "version": 123,
  },
  "orderBookSubscription": "pair",
  "updateOrders": Object {
    "userOrder": "test",
  },
  "userOrderSubscription": 0,
  "userOrders": Array [
    Object {
      "userOrders": "test",
    },
  ],
}
`;

exports[`dex reducer orderBookSubscription off 1`] = `
Object {
  "orderBookSnapshot": Object {
    "asks": Array [],
    "bids": Array [],
    "pair": "pair",
    "version": 0,
  },
  "orderBookSubscription": "",
  "updateOrders": Object {
    "userOrder": "test",
  },
  "userOrderSubscription": 0,
  "userOrders": Array [
    Object {
      "userOrders": "test",
    },
  ],
}
`;

exports[`dex reducer orderBookSubscription on 1`] = `
Object {
  "orderBookSnapshot": Object {
    "asks": Array [],
    "bids": Array [],
    "pair": "pair",
    "version": 0,
  },
  "orderBookSubscription": "pair",
  "updateOrders": Object {
    "userOrder": "test",
  },
  "userOrderSubscription": 0,
  "userOrders": Array [
    Object {
      "userOrders": "test",
    },
  ],
}
`;

exports[`dex reducer orderBookUpdate 1`] = `
Object {
  "orderBookSnapshot": Object {
    "asks": Array [
      2,
    ],
    "bids": Array [
      1,
    ],
    "pair": "pair",
    "version": 123,
  },
  "orderBookSubscription": "pair",
  "updateOrders": Object {
    "userOrder": "test",
  },
  "userOrderSubscription": 0,
  "userOrders": Array [
    Object {
      "userOrders": "test",
    },
  ],
}
`;

exports[`dex reducer orderBookUpdate 2`] = `
Array [
  Array [
    Object {
      "asks": Array [
        2,
      ],
      "bids": Array [
        1,
      ],
      "pair": "pair",
      "version": 123,
    },
    Object {
      "pair": "pair",
    },
  ],
]
`;

exports[`dex reducer orderBookUpdate wrong pair 1`] = `
Object {
  "orderBookSnapshot": Object {
    "asks": Array [
      2,
    ],
    "bids": Array [
      1,
    ],
    "pair": "pair",
    "version": 123,
  },
  "orderBookSubscription": "pair",
  "updateOrders": Object {
    "userOrder": "test",
  },
  "userOrderSubscription": 0,
  "userOrders": Array [
    Object {
      "userOrders": "test",
    },
  ],
}
`;

exports[`dex reducer updateOrders 1`] = `
Object {
  "orderBookSnapshot": Object {
    "asks": Array [],
    "bids": Array [],
    "pair": "pair",
    "version": 0,
  },
  "orderBookSubscription": "",
  "updateOrders": Object {
    "userOrder": "test",
  },
  "userOrderSubscription": 0,
  "userOrders": Array [],
}
`;

exports[`dex reducer userOrders 1`] = `
Object {
  "orderBookSnapshot": Object {
    "asks": Array [],
    "bids": Array [],
    "pair": "pair",
    "version": 0,
  },
  "orderBookSubscription": "",
  "updateOrders": Object {
    "userOrder": "test",
  },
  "userOrderSubscription": 0,
  "userOrders": Array [
    Object {
      "userOrders": "test",
    },
  ],
}
`;
